[project]
name = "tripit-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for TripIt API"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=0.1.4",
    "httpx>=0.23.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.1.0",
    "ruff>=0.0.138",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
